# starsight

./: .gitignore  .gitmodules  CMakeLists.txt
saved/logs/: log_20231030_172337.txt  log_20231030_172519.txt  log_20231030_172700.txt  log_20231030_172841.txt  log_20231030_173007.txt  log_20231030_173258.txt  log_20231030_173708.txt  log_20231030_174054.txt  log_20231030_174158.txt
shaders/: build_draw_commands.comp  forward.frag  forward.vert  geometry.frag  geometry.vert  global_light.comp  utility.glsl
src/: main.cpp
src/audio/: CMakeLists.txt
src/audio/include/audio/: audio_context.hpp
src/audio/src/: audio_context.cpp
src/core/: CMakeLists.txt
src/core/include/core/: assertion.hpp  filesystem.hpp  log.hpp  math.hpp  resource.hpp  ssovector.hpp  time.hpp  utility_functions.hpp
src/core/src/: assertion.cpp  filesystem.cpp  functions.asm  log.cpp  math.cpp  time.cpp  utility_functions.cpp
src/render/: CMakeLists.txt
src/render/include/render/: image.hpp  spirv_reflect.hpp  vk_buffer.hpp  vk_context.hpp  vk_descriptor.hpp  vk_memory_allocator.hpp  vk_model.hpp  vk_pipeline.hpp  vk_render_target.hpp  vk_shader.hpp  vk_utility.hpp
src/render/src/: image.cpp  spirv_reflect.cpp  vk_buffer.cpp  vk_context.cpp  vk_descriptor.cpp  vk_memory_allocator.cpp  vk_model.cpp  vk_pipeline.cpp  vk_render_target.cpp  vk_shader.cpp  vk_utility.cpp
src/window/: CMakeLists.txt
src/window/include/window/: window.hpp
src/window/src/: window.cpp
src/world/: CMakeLists.txt
src/world/include/world/: audio_module.hpp  camera_component.hpp  input_module.hpp  mesh_component.hpp  model_component.hpp  render_module.hpp  soundcue_component.hpp  transform_component.hpp  world.hpp
src/world/src/: audio_module.cpp  camera_component.cpp  input_module.cpp  mesh_component.cpp  model_component.cpp  render_module.cpp  soundcue_component.cpp  world.cpp
